--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,9 +1,9 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Robotics Seminar"
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
+venue: "Cornell University"
 date: 2012-03-01
 location: "San Francisco, California"
 ---
