--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -20,7 +20,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -49,18 +52,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
+      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\n",
+      "Robotics Seminar\tTalk\ttalk-1\tCornell University\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.\n"
      ]
     }
    ],
@@ -85,13 +91,29 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -109,10 +131,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Talk 1 on Relevant Topic in Your Field</td>\n",
+       "      <td>Robotics Seminar</td>\n",
        "      <td>Talk</td>\n",
        "      <td>talk-1</td>\n",
-       "      <td>UC San Francisco, Department of Testing</td>\n",
+       "      <td>Cornell University</td>\n",
        "      <td>2012-03-01</td>\n",
        "      <td>San Francisco, California</td>\n",
        "      <td>NaN</td>\n",
@@ -157,7 +179,7 @@
       ],
       "text/plain": [
        "                                               title  \\\n",
-       "0             Talk 1 on Relevant Topic in Your Field   \n",
+       "0                                   Robotics Seminar   \n",
        "1         Tutorial 1 on Relevant Topic in Your Field   \n",
        "2             Talk 2 on Relevant Topic in Your Field   \n",
        "3  Conference Proceeding talk 3 on Relevant Topic...   \n",
@@ -169,7 +191,7 @@
        "3  Conference proceedings talk      talk-3   \n",
        "\n",
        "                                               venue        date  \\\n",
-       "0            UC San Francisco, Department of Testing  2012-03-01   \n",
+       "0                                 Cornell University  2012-03-01   \n",
        "1          UC-Berkeley Institute for Testing Science  2013-03-01   \n",
        "2                           London School of Testing  2014-02-01   \n",
        "3  Testing Institute of America 2014 Annual Confe...  2014-03-01   \n",
@@ -212,7 +234,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -244,7 +269,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -306,15 +334,18 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\r\n",
-      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\r\n"
+      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\n",
+      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\n"
      ]
     }
    ],
@@ -328,26 +359,29 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\r\n",
-      "collection: talks\r\n",
-      "type: \"Tutorial\"\r\n",
-      "permalink: /talks/2013-03-01-tutorial-1\r\n",
-      "venue: \"UC-Berkeley Institute for Testing Science\"\r\n",
-      "date: 2013-03-01\r\n",
-      "location: \"Berkeley CA, USA\"\r\n",
-      "---\r\n",
-      "\r\n",
-      "[More information here](http://exampleurl.com)\r\n",
-      "\r\n",
-      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n"
+      "---\n",
+      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\n",
+      "collection: talks\n",
+      "type: \"Tutorial\"\n",
+      "permalink: /talks/2013-03-01-tutorial-1\n",
+      "venue: \"UC-Berkeley Institute for Testing Science\"\n",
+      "date: 2013-03-01\n",
+      "location: \"Berkeley CA, USA\"\n",
+      "---\n",
+      "\n",
+      "[More information here](http://exampleurl.com)\n",
+      "\n",
+      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n"
      ]
     }
    ],
@@ -358,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -372,9 +406,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
